--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,19 @@
+:root {
+  --dark: #1c2e50;
+  --blue: #133b5c;
+  --light-blue: #1d6075;
+  --light: #fcdab7;
+  --black: #222222;
+  --white: #ffffff;
+  --border-color: #2c5e8a;
+}
+
+* {
+  font-size: 20px;
+  color: var(--light);
+  text-align: center;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
