--- a/client/src/app/components/Input/index.css
+++ b/client/src/app/components/Input/index.css
@@ -17,3 +17,12 @@
   color: var(--light);
   opacity: 0.6;
 }
+
+.Input--small {
+  width: 70%;
+  max-height: 50px;
+}
+
+/* .Input--small::value {
+  font-size: 25px;
+} */
